--- a/JuegoMemoria_RusYeray_V2/Aplicacion/css/estilos.css
+++ b/JuegoMemoria_RusYeray_V2/Aplicacion/css/estilos.css
@@ -1,4 +1,4 @@
-h1, h2{
+body, p{
     text-align: center;
 }
 
@@ -15,7 +15,22 @@ table,tr,td{
     background-color: white;
 
 }
-td {width: 50px;
+td{
+    width: 50px;
     height: 50px;
     text-align: center;
+}
+
+a{ 
+    background-color: aquamarine;
+    padding: 5px;
+    border: 2px solid black;
+    border-radius: 20px;
+    text-decoration: none;
+    color: red;
+}
+
+p{
+    padding: 10px;
+    font-size: 30px;
 }
