--- a/JuegoMemoria_RusYeray_V2/Aplicacion/css/estilos.css
+++ b/JuegoMemoria_RusYeray_V2/Aplicacion/css/estilos.css
@@ -1,9 +1,10 @@
-body, p{
+h1, h2, p{
     text-align: center;
 }
 
 table{
     text-align: center;
+    margin-top: 50px;
 }
 table,tr,td{         
     border: 2px solid black;
