--- a/JuegoMemoria_RusYeray_V2/Aplicacion/css/estilos.css
+++ b/JuegoMemoria_RusYeray_V2/Aplicacion/css/estilos.css
@@ -1,4 +1,4 @@
-h1, h2, p{
+body{
     text-align: center;
 }
 
@@ -20,12 +20,17 @@ td{
 }
 
 a{ 
-    background-color: aquamarine;
     padding: 5px;
-    border: 2px solid black;
-    border-radius: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-top: 2px solid black;
+    border-left: 2px solid black;
+    border-right: 2px solid black;
     text-decoration: none;
-    color: red;
+    color: rgb(0, 0, 0);
+    width: 500px;
+    font-size: 20px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 p{
