--- a/JuegoMemoria_RusYeray_V2/Aplicacion/css/estilos.css
+++ b/JuegoMemoria_RusYeray_V2/Aplicacion/css/estilos.css
@@ -1,18 +1,32 @@
 body{
     text-align: center;
+    background-image: url(img_css/fondo.jpg);
 }
+
+h1,h2,p,a{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+h1,h2{
+    text-decoration: underline 5px;
+}
+
 
 table{
     text-align: center;
     margin-top: 50px;
+    border: 10px outset black;
 }
 table,tr,td{         
-    border: 2px solid black;
     margin-top: 10px;
     margin: auto;
     border-collapse:collapse ;
     background-color: white;
 }
+
+tr,td{         
+    border: 5px ridge black;
+}
+
 td{
     text-align: center;
     width: 100px;
@@ -23,14 +37,15 @@ a{
     padding: 5px;
     padding-left: 15px;
     padding-right: 15px;
-    border-top: 2px solid black;
-    border-left: 2px solid black;
-    border-right: 2px solid black;
+    border-top: 5px outset rgb(1, 1, 1);
+    border-left: 5px outset rgb(1, 1, 1);
+    border-right: 5px outset rgb(1, 1, 1);
     text-decoration: none;
     color: rgb(0, 0, 0);
     width: 500px;
     font-size: 20px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: rgb(250, 0, 21);
+    background-color: rgb(190, 189, 189);
 }
 
 p{
